# context_switching_attn

./: .gitignore  pyproject.toml  requirements.txt
src/context_switching_attn/: __init__.py  experiments.py  main.py  metrics.py  model_wrapper.py  openrouter.py  prompt_loader.py  utils.py
src/context_switching_attn/dataset/: __init__.py  code_completion.py  gigaword.py  mmlu.py  paraphrase.py  rotten_tomatoes.py  tweet_qa.py
tests/: test_all.py  test_openrouter.py
