[project]
name = "context-switching-attn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tanush Chopra", email = "tchopra32@gatech.edu" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
