[project]
name = "context-switching-attn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tanush Chopra", email = "tchopra32@gatech.edu" }
]
requires-python = ">=3.10"
dependencies = [
    "absl-py>=2.2.2",
    "accelerate>=1.6.0",
    "aiohappyeyeballs>=2.6.1",
    "aiohttp>=3.11.18",
    "aiosignal>=1.3.2",
    "annotated-types>=0.7.0",
    "async-timeout>=5.0.1",
    "attrs>=25.3.0",
    "beartype>=0.14.1",
    "better-abc>=0.0.3",
    "certifi>=2025.4.26",
    "charset-normalizer>=3.4.2",
    "circuitsvis>=1.43.3",
    "click>=8.1.8",
    "contourpy>=1.3.2",
    "cycler>=0.12.1",
    "datasets==2.16",
    "dill>=0.3.7",
    "docker-pycreds>=0.4.0",
    "dotenv>=0.9.9",
    "einops>=0.8.1",
    "fancy-einsum>=0.0.3",
    "filelock>=3.18.0",
    "fonttools>=4.57.0",
    "frozenlist>=1.6.0",
    "fsspec==2023.9.2",
    "gitdb>=4.0.12",
    "gitpython>=3.1.44",
    "huggingface-hub>=0.30.2",
    "idna>=3.10",
    "importlib-metadata>=8.7.0",
    "jaxtyping>=0.3.2",
    "jinja2>=3.1.6",
    "joblib>=1.5.0",
    "kiwisolver>=1.4.8",
    "markdown-it-py>=3.0.0",
    "markupsafe>=3.0.2",
    "matplotlib>=3.10.1",
    "mdurl>=0.1.2",
    "mpmath>=1.3.0",
    "multidict>=6.4.3",
    "multiprocess>=0.70.15",
    "networkx>=3.4.2",
    "nltk>=3.9.1",
    "numpy>=2.2.5",
    "packaging>=25.0",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "platformdirs>=4.3.7",
    "propcache>=0.3.1",
    "protobuf>=6.30.2",
    "psutil>=7.0.0",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.4",
    "pydantic-core>=2.33.2",
    "pygments>=2.19.1",
    "pyparsing>=3.2.3",
    "pytest>=8.3.5",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.0",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "regex>=2024.11.6",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "rouge-score>=0.1.2",
    "safetensors>=0.5.3",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.0",
    "sentry-sdk>=2.27.0",
    "setproctitle>=1.3.6",
    "six>=1.17.0",
    "smmap>=5.0.2",
    "sympy>=1.14.0",
    "tokenizers>=0.21.1",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "transformer-lens>=2.15.0",
    "transformers>=4.51.3",
    "typeguard>=4.4.2",
    "typing-extensions>=4.13.2",
    "typing-inspection>=0.4.0",
    "tzdata>=2025.2",
    "urllib3>=2.4.0",
    "wadler-lindig>=0.1.5",
    "wandb>=0.19.10",
    "xxhash>=3.5.0",
    "yarl>=1.20.0",
    "zipp>=3.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

